Correct h1 style to "text-align"

--- a/main.css
+++ b/main.css
@@ -1,3 +1,3 @@
 h1 {
-    align-content: center
+    text-align: center
 }
